# backend-ii

./: .gitignore  Dockerfile  Makefile
Projeto-backendII/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  requirements.txt  test_agents_terminal.py
sessao1/: challenge.py  exercise.py
sessao10/: README-django.md  README-fastapi.md  challenge.py  django_settings.py  django_urls.py  exercise.py  login_template.html  requirements-django.txt  requirements-fastapi.txt  test_fastapi_security.py
sessao11/: README.md  challenge.py  requirements.txt
sessao12/: README.md  requirements.txt
sessao12/challenge/: client.py  server.py
sessao12/exercise/: client.py  server.py
sessao13/: Makefile  README.md  docker-compose.yml
sessao13/challenge/: before_refactor.py
sessao13/django_hello/: Dockerfile  README.md  manage.py  (+2 more)
sessao14/: README.md  challenge.py  exercise.py  requirements.txt
sessao15/: README.md  challenge.py  exercise.py  requirements.txt
sessao16/: README.md  pyproject.toml  requirements.txt  setup.py
sessao16/.github/workflows/: challenge.yml  ci.yml  exercise.yml
sessao16/calculator/: __init__.py
sessao16/calculator/tests/: test_calculator.py
sessao2/: challenge.py  exercise.py
sessao3/: challenge.py  exercise.py  exercise2.py  exercise3.py  exercise4.py
sessao4/: challenge.py  exercise.py  exercise2.py
sessao5/: challenge.py  exercise.py
sessao6/: challenge.py  exercise.py  pyproject.toml
sessao7/: challenge.py  exercise.py  exercise1.py
sessao8/: challenge.py  exercise.py
sessao9/: README.md
(+71 files in other folders)
